--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body {
 }
 
 img {
-    width: 45%;
+    width: 350px;
     height: auto;
     border-radius: 8px;
     flex-shrink: 0;
 }
 
 .icon {
-    width: 100px;
+    width: 120px;
     height: auto;
+    border: 4px solid #ba4e81;
 }
 
 /* Lists and Links */
@@ -67,9 +68,11 @@ a {
 .text-image {
     display: flex;
     padding: 10%;
-    gap: 5%;
+    gap: 30px;
     align-items: center;
     justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
 }
 
 .text-left {
@@ -77,6 +80,8 @@ a {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
+    flex-basis: 400px;
+    flex-grow: 1;
 }
 
 h1 {
@@ -101,4 +106,27 @@ button {
     padding: 8px 30px;
     color: white;
     font-weight: bold;
+}
+
+/* Block 2 */
+.block-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.boxes {
+    display: flex;
+    gap: 30px;
+    padding: 0 10%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: 800;
+    text-align: center;
 }
