--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+
 /* Images */
 .logo-icon {
     width: 55px;
@@ -115,6 +119,8 @@ button {
     justify-content: center;
     align-items: center;
     flex: 1;
+    padding: 10%;
+    gap: 30px;
 }
 
 .boxes {
@@ -129,4 +135,28 @@ h3 {
     font-size: 36px;
     font-weight: 800;
     text-align: center;
+    margin: 0;
+}
+
+/* Block 3 */
+.block-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+    background-color: #E5E7EB;
+    padding: 10% 20%;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+}
+
+.author {
+    align-self: flex-end;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: bold;
 }
