--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ p {
     width: 55px;
     height: auto;
     flex: none;
+    box-shadow: none;
 }
 
 .header-link {
@@ -23,16 +24,27 @@ p {
 }
 
 img {
-    width: 450px;
+    width: 40vw;
     height: auto;
     border-radius: 8px;
     flex-shrink: 0;
+    flex-grow: 1;
+    align-self: center;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.logo-image,
+.icon {
+    border: 4px solid #ba4e81;
 }
 
 .icon {
     width: 120px;
     height: auto;
-    border: 4px solid #ba4e81;
+}
+
+.twitter {
+    box-shadow: none;
 }
 
 /* Lists and Links */
@@ -40,6 +52,7 @@ ul {
     list-style-type: none;
     display: flex;
     gap: 25px;
+    padding: 0;
 }
 
 a {
@@ -65,7 +78,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10%;
+    padding: 1% 10%;
     position: fixed;
     top: 0;
     right: 0;
@@ -75,8 +88,8 @@ a {
 
 .text-image {
     display: flex;
-    padding: 10%;
-    gap: 30px;
+    padding: 15% 10%;
+    gap: 5vw;
     align-items: center;
     justify-content: center;
     gap: 30px;
@@ -88,7 +101,7 @@ a {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
-    flex-basis: 400px;
+    flex-basis: 35vw;
     flex-grow: 1;
 }
 
@@ -114,6 +127,7 @@ button {
     padding: 8px 30px;
     color: white;
     font-weight: bold;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /* Block 2 */
@@ -124,7 +138,7 @@ button {
     align-items: center;
     flex: 1;
     padding: 10%;
-    gap: 30px;
+    gap: 8vh;
 }
 
 .boxes {
@@ -168,6 +182,7 @@ h3 {
     font-size: 32px;
     font-style: normal;
     font-weight: bold;
+    text-align: right;
 }
 
 /* Block 4 */
@@ -178,6 +193,7 @@ h3 {
     margin: 10%;
     padding: 4% 8%;
     background-color: #ba4e81;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     color: #F9FAF8;
 }
@@ -190,6 +206,7 @@ h4 {
     flex-shrink: 0;
     border: 1px solid #F9FAF8;
     align-self: center;
+    box-shadow: none;
 }
 
 .text {
