--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 1% 10%;
-    position: fixed;
+    position: sticky;
     top: 0;
     right: 0;
     left: 0;
@@ -88,7 +88,7 @@ a {
 
 .text-image {
     display: flex;
-    padding: 15% 10%;
+    padding: 5% 10% 10% 10%;
     gap: 5vw;
     align-items: center;
     justify-content: center;
